--- a/jenkinsfile
+++ b/jenkinsfile
@@ -63,7 +63,7 @@ dockerImage.push()
 stage('Deploy App') {
       steps {
         script {
-          kubernetesDeploy(configs: "nginx.yaml", kubeconfigId: "mykubeconfig")
+          kubernetesDeploy(configs: "nginx.yaml", kubeconfigId: "bmi-app")
         }
       }
     }
