--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
   spec:
    containers:
    - name: myapp
-     image: ameintu/devops:tagversion
+     image: gcr.io/meta-router-280711/helloworld-gke
      ports:
      - containerPort: 8080
 
